--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "S0FA",
   "license": "ISC",
   "dependencies": {
+    "@discordjs/voice": "^0.16.0",
     "cron": "^2.4.3",
     "discord.js": "^14.12.1",
     "dotenv": "^16.3.1"
