--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@discordjs/voice": "^0.16.0",
     "cron": "^2.4.3",
     "discord.js": "^14.12.1",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@types/node": "^20.4.10",
